WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34216
AccessibilityController.h doesn't compile with RealView ARM compilers
https://bugs.webkit.org/show_bug.cgi?id=34216
Summary
AccessibilityController.h doesn't compile with RealView ARM compilers
George Wright
Reported
2010-01-27 08:20:38 PST
When trying to compile using RealView I get the following error: "../../../WebKitTools/DumpRenderTree/AccessibilityController.h", line 30: Error: #59: function call is not allowed in a constant expression #if PLATFORM(WIN) ^ "../../../WebKitTools/DumpRenderTree/AccessibilityController.h", line 56: Error: #59: function call is not allowed in a constant expression #if PLATFORM(WIN) ^ This only seems to happen with RealView (I'm using RVCT 4).
Attachments
Add missing #include
(844 bytes, patch)
2010-01-27 08:37 PST
,
George Wright
manyoso
: review-
Details
Formatted Diff
Diff
Add ChangeLog
(1.33 KB, patch)
2010-01-27 08:50 PST
,
George Wright
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
George Wright
Comment 1
2010-01-27 08:37:55 PST
Created
attachment 47540
[details]
Add missing #include Add missing include for wtf/Platform.h so that the #if PLATFORM(WIN) statement doesn't result in an error.
Adam Treat
Comment 2
2010-01-27 08:41:32 PST
Comment on
attachment 47540
[details]
Add missing #include Add a real changelog please.
George Wright
Comment 3
2010-01-27 08:50:28 PST
Created
attachment 47542
[details]
Add ChangeLog Update to previous patch to include a proper ChangeLog.
WebKit Commit Bot
Comment 4
2010-01-27 17:05:49 PST
Comment on
attachment 47542
[details]
Add ChangeLog Clearing flags on attachment: 47542 Committed
r53962
: <
http://trac.webkit.org/changeset/53962
>
WebKit Commit Bot
Comment 5
2010-01-27 17:05:54 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug