2010-01-27  George Wright  <gwright@rim.com>

Reviewed by Adam Treat.

        https://bugs.webkit.org/show_bug.cgi?id=34216

        Add missing include for wtf/Platform.h

        * DumpRenderTree/AccessibilityController.h:

Canonical link: https://commits.webkit.org/45345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53962 268f45cc-cd09-0410-ab3c-d52691b4dbfc